--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
     <section id="me">
       <h4>About Me</h4>
         <p class="aboutMe">
-          HI, I'm Frank Finger a coder with a background in management and customer relations.  I am best know for my positive attitude, enthusiasm for college sports, my love for movies, travel when possible and a desire for building and nurturing relationships.
+          HI, I'm Frank Finger a coder with a background in management and customer relations.  I am best known for my positive attitude, enthusiasm for college sports, my love for movies, travel when possible and a desire for building and nurturing relationships.
         </p>
         <ul>
           <li>
@@ -117,21 +117,29 @@
                   <a href="http://franklinfinger.github.io/jep/#/jepapp">
                   <h3>Jeopardy</h3></a>
                   <p>
-                    * API<br>* AngularJs<br>* Bootstrap<br>* Sass
+                    * Jservice API<br>* AngularJs<br>* Bootstrap<br>* Sass
                   </p>
                 </div>
               </div>
+              <p>
+                Jeopardy has live scoring with hundreds of categories and questions
+              </p>
+              <h5><a href="http://franklinfinger.github.io/jep/#/jepapp">{ LIVE }</a>  |  <a href="https://github.com/franklinfinger/jep">{ CODE }</a></h5>
             </li>
             <li>
               <div class="ch-item ch-img-2">
                 <div class="ch-info">
-                  <a href="http://107.170.5.193:8081/">
-                  <h3>Happy Hour<br> Anonymous</h3></a>
+                  <a href="http://franklinfinger.github.io/rebecca-heineman/">
+                  <h3>Suds Tracker</h3></a>
                   <p>
-                    * Backbone<br>* Jquery<br>* Underscore<br>* Sass
+                    * Google API<br>* Jquery<br>* Underscore<br>* Css
                   </p>
                 </div>
               </div>
+              <p>
+                Suds Tracker helps local breweries near you using your location or zipcode
+              </p>
+              <h5><a href="http://franklinfinger.github.io/rebecca-heineman/">{ LIVE }</a>  |  <a href="https://github.com/franklinfinger/rebecca-heineman">{ CODE }</a></h5>
             </li>
             <li>
               <div class="ch-item ch-img-3">
@@ -143,6 +151,10 @@
                   </p>
                 </div>
               </div>
+              <p>
+                Farmers Market connects businesses find produce from local farms
+              </p>
+            <h5><a href="http://107.170.55.41:8080/#/">{ LIVE }</a>  |  <a href="https://github.com/franklinfinger/FarmersMarket">{ CODE }</a></h5>
             </li>
             <li>
               <div class="ch-item ch-img-4">
@@ -154,8 +166,12 @@
                   </p>
                 </div>
               </div>
+              <p>
+                A Recreation of my github account with links to my repos
+              </p>
+              <h5><a href="http://franklinfinger.github.io/recgithub/">{ LIVE }</a>  |  <a href="https://github.com/franklinfinger/recgithub">{ CODE }</a></h5>
             </li>
-          </ul>
+        </ul>
     </section>
   </div>
 
@@ -199,7 +215,7 @@
         <h2 class="fullName">Franklin Finger</h2>
         <ul>
           <li>
-            <p><i class="fa fa-lg fa-phone"></i><span>843-338-1020</span></p>
+            <p><i class="fa fa-lg fa-phone"></i><a href="tel:843-338-1020"></a>843-338-1020</p>
           </li>
           <li>
             <p><a href="mailto:franklinfinger@gmail.com"><i class="fa fa-lg fa-envelope"></i>franklinfinger@gmail.com</a></p>
