--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
       <section id="skills">
         <h4>RESUME & SKILLS</h4>
         <h6>* some skills are greater than others</h6>
-        <a href="finger-resume.pdf">
+        <a href="resume-franklin-finger.pdf">
           <p>Resume<br><i class="fa fa-file-pdf-o" aria-hidden="true"></i></p>
         </a>
           <ul>
