changed some wording

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                 </div>
               </div>
               <p>
-                Suds Tracker helps local breweries near you using your location or zipcode
+                Suds Tracker helps you find local breweries using your location or zipcode
               </p>
               <h5><a href="http://franklinfinger.github.io/rebecca-heineman/">{ LIVE }</a>  |  <a href="https://github.com/franklinfinger/rebecca-heineman">{ CODE }</a></h5>
             </li>
