changed some wording

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                 </div>
               </div>
               <p>
-                Farmers Market connects businesses find produce from local farms
+                Farmers Market connects local businesses with local farmers
               </p>
             <h5><a href="http://107.170.55.41:8080/#/">{ LIVE }</a>  |  <a href="https://github.com/franklinfinger/FarmersMarket">{ CODE }</a></h5>
             </li>
