add a new resume

--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
       <section id="skills">
         <h4>RESUME & SKILLS</h4>
         <h6>* some skills are greater than others</h6>
-        <a href="resume-franklin-finger-2016.pdf">
+        <a href="Finger-Resume.pdf">
           <p>Resume<br><i class="fa fa-file-pdf-o" aria-hidden="true"></i></p>
         </a>
           <ul>
@@ -201,10 +201,10 @@
             <li><i class="devicon-backbonejs-plain-wordmark colored"></i></li>
             <li><i class="devicon-bootstrap-plain-wordmark colored"></i></li>
             <li><i class="devicon-github-plain-wordmark colored"></i></li>
-            <li><i class="devicon-nodejs-plain-wordmark colored"></i></li>
             <li><i class="devicon-sass-original colored"></i></li>
             <li><i class="devicon-trello-plain-wordmark colored"></i></li>
             <li><i class="devicon-atom-original colored"></i></li>
+            <li><i class="devicon-git-plain-wordmark colored"></i></li>
           </ul>
       </section>
     </div>
