changed some word in about me

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
     <section id="me">
       <h4>About Me</h4>
         <p class="aboutMe">
-          HI, I'm Frank Finger a coder with a background in management and customer relations.  I am best known for my positive attitude, enthusiasm for college sports, my love for movies, travel when possible and a desire for building and nurturing relationships.
+          HI, I'm Frank Finger a coder with a background in management and customer relations.  I am best known for my positive attitude, enthusiasm for college sports, love for movies, travel when possible and a desire for building and nurturing relationships.
         </p>
         <ul>
           <li>
