added clicks to open in new tab

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
             <li>
               <div class="ch-item ch-img-1">
                 <div class="ch-info">
-                  <a href="http://franklinfinger.github.io/jep/#/jepapp">
+                  <a target="_blank" href="http://franklinfinger.github.io/jep/#/jepapp">
                   <h3>Jeopardy</h3></a>
                   <p>
                     * Jservice API<br>* AngularJs<br>* Bootstrap<br>* Sass
@@ -124,12 +124,12 @@
               <p>
                 Jeopardy has live scoring with hundreds of categories and questions
               </p>
-              <h5><a href="http://franklinfinger.github.io/jep/#/jepapp">{ LIVE }</a>  |  <a href="https://github.com/franklinfinger/jep">{ CODE }</a></h5>
+              <h5><a target="_blank" href="http://franklinfinger.github.io/jep/#/jepapp">{ LIVE }</a>  |  <a target="_blank" href="https://github.com/franklinfinger/jep">{ CODE }</a></h5>
             </li>
             <li>
               <div class="ch-item ch-img-2">
                 <div class="ch-info">
-                  <a href="http://franklinfinger.github.io/rebecca-heineman/">
+                  <a target="_blank" href="http://franklinfinger.github.io/rebecca-heineman/">
                   <h3>Suds Tracker</h3></a>
                   <p>
                     * Google API<br>* Jquery<br>* Underscore<br>* Css
@@ -139,12 +139,12 @@
               <p>
                 Suds Tracker helps you find local breweries using your location or zip code
               </p>
-              <h5><a href="http://franklinfinger.github.io/rebecca-heineman/">{ LIVE }</a>  |  <a href="https://github.com/franklinfinger/rebecca-heineman">{ CODE }</a></h5>
+              <h5><a target="_blank" href="http://franklinfinger.github.io/rebecca-heineman/">{ LIVE }</a>  |  <a target="_blank" href="https://github.com/franklinfinger/rebecca-heineman">{ CODE }</a></h5>
             </li>
             <li>
               <div class="ch-item ch-img-3">
                 <div class="ch-info">
-                  <a href="http://107.170.85.130:8080/#/">
+                  <a target="_blank" href="http://107.170.85.130:8080/#/">
                   <h3>Farmers Market</h3></a>
                   <p>
                     * AngularJs<br>* Jquery<br>* UI Bootstrap<br>* Underscore<br>
@@ -154,12 +154,12 @@
               <p>
                 Farmers Market connects local businesses with local farmers
               </p>
-            <h5><a href="http://107.170.85.130:8080/#/">{ LIVE }</a>  |  <a href="https://github.com/franklinfinger/FarmersMarket">{ CODE }</a></h5>
+            <h5><a target="_blank" href="http://107.170.85.130:8080/#/">{ LIVE }</a>  |  <a target="_blank" href="https://github.com/franklinfinger/FarmersMarket">{ CODE }</a></h5>
             </li>
             <li>
               <div class="ch-item ch-img-4">
                 <div class="ch-info">
-                  <a href="http://franklinfinger.github.io/recgithub/">
+                  <a target="_blank" href="http://franklinfinger.github.io/recgithub/">
                   <h3>Recreated Github</h3></a>
                   <p>
                     * Jquery<br>* Underscore<br>* Css
@@ -169,7 +169,7 @@
               <p>
                 A Recreation of my github account with links to my repos
               </p>
-              <h5><a href="http://franklinfinger.github.io/recgithub/">{ LIVE }</a>  |  <a href="https://github.com/franklinfinger/recgithub">{ CODE }</a></h5>
+              <h5><a target="_blank" href="http://franklinfinger.github.io/recgithub/">{ LIVE }</a>  |  <a target="_blank" href="https://github.com/franklinfinger/recgithub">{ CODE }</a></h5>
             </li>
         </ul>
     </section>
